--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
 
     "isolatedModules": true,
   },
