--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-lsh-logic",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A single, powerful node to manage advanced automation logic for an LSH (Labo Smart Home) style system.",
   "main": "dist/lsh-logic.js",
   "scripts": {
@@ -43,7 +43,8 @@
   "node-red": {
     "nodes": {
       "lsh-logic": "dist/lsh-logic.js"
-    }
+    },
+    "version": ">=3.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
