--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-lsh-logic",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A single, powerful node to manage advanced automation logic for an LSH (Labo Smart Home) style system.",
   "main": "dist/lsh-logic.js",
   "scripts": {
@@ -16,7 +16,8 @@
   "files": [
     "dist/",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "examples/"
   ],
   "keywords": [
     "node-red",
