ci: align release workflow strictly with npm trusted publishing guide

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,34 +5,26 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
   release:
-    name: Create Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
+      
+      - run: npm run build
 
-      - name: Build
-        run: npm run build
-
-      - name: Test
-        run: npm test
-
-      - name: Pack
-        run: npm pack
+      - run: npm test
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -40,7 +32,4 @@ jobs:
           files: "*.tgz"
           generate_release_notes: true
 
-      - name: Publish to NPM
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: npm publish
